# Web3Wallet

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  ReadMe.md  clippy.toml  rustfmt.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
specs/001-wallet-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-wallet-cli/contracts/: cli-interface.md  error-handling.md
src/: config.rs  errors.rs  lib.rs  main.rs  utils.rs
src/cli/: mod.rs
src/models/: address.rs  command.rs  keystore.rs  mod.rs  wallet.rs
src/services/: crypto.rs  mnemonic.rs  mod.rs  wallet_manager.rs
tests/: lib.rs
tests/common/: mod.rs
tests/contract/: test_create_command.rs  test_crypto_errors.rs  test_derive_command.rs  test_fs_errors.rs  test_import_command.rs  test_input_errors.rs  test_list_command.rs  test_load_command.rs
tests/integration/: test_metamask_compat.rs  test_storage_encryption.rs  test_wallet_creation.rs  test_wallet_import.rs
